Let ChromiumBridge::paintTextField check if the Color object passed in is valid or not. If not valid, just pass white to ThemeEngine.

This change was motivated by the issue
http://code.google.com/p/chromium/issues/detail?id=2756, but it has been
resolved by only the upstream change
https://bugs.webkit.org/show_bug.cgi?id=25742.

However, this verification code is still useful.

BUG=2756
Checked in for tyoshino@google.com
Original review: http://codereview.chromium.org/113165

Review URL: http://codereview.chromium.org/113907

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@17001 0039d316-1c4b-4281-b951-d872f2087c98